--- a/css/style.css
+++ b/css/style.css
@@ -70,7 +70,7 @@ a {
   letter-spacing: 0.15px;
 }
 
-.main-user-navigation li:first-child a:before {
+.main-user-navigation li:first-child a:first-child:before {
   content: url(../img/user.svg);
 }
 
