--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,29 @@
   font-style: normal;
 }
 
+body {
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flex;
+  display: -o-flex;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.wrapper {
+  width: 1160px;
+  margin: 0 auto;
+}
+
+.container {
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flex;
+  display: -o-flex;
+  display: flex;
+  flex-wrap: wrap;
+}
+
 a {
   text-decoration: none;
 }
@@ -73,9 +96,11 @@ a {
 
   position: relative;
 
-  max-width: 1038px;
+  flex-basis: 100%;
+
+  max-width: 1039px;
   margin: 40px auto 0 auto;
-  padding: 53px 61px 0 61px;
+  padding: 34px 61px 0 61px;
 }
 
 .inner-logo:hover,
@@ -105,6 +130,7 @@ a {
 
 .site-search,
 .main-user-nav {
+  padding: 0;
   flex-basis: 50%;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -132,7 +158,9 @@ a {
   display: -ms-flex;
   display: -o-flex;
   display: flex;
-  padding-top: 35px;
+  padding: 0;
+  padding-bottom: 130px;
+  position: relative;
 }
 
 .main-site-item:first-child {
@@ -277,14 +305,8 @@ a {
   flex-wrap: wrap;
 }
 
-.main-user-nav,
-.main-submenu,
-.main-site-list,
-.footer-user-nav,
-.footer-nav-list,
-.footer-social-list {
+.lst-reset {
   list-style-type: none;
-  padding: 0;
 }
 
 .main-user-nav a {
@@ -318,13 +340,44 @@ a {
   letter-spacing: 3.6px;
 }
 
-.main-site-item:first-child:hover .main-submenu {
+.main-site-item:first-child:hover .main-submenu-container {
   display: block;
 }
 
-.main-submenu {
+.main-submenu-container {
   display: none;
+  position: absolute;
 }
+
+.main-submenu {
+  padding: 0;
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flex;
+  display: -o-flex;
+  display: flex;
+  -webkit-flex-direction: row;
+  -moz-flex-direction: row;
+  -ms-flex-direction: row;
+  -o-flex-direction: row;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.main-submenu-item {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+.main-submenu-item {
+  flex-basis: 33.3333%;
+}
+
+.main-submenu-item:last-of-type {
+  flex-basis: 100%;
+}
+
 
 .main-submenu a {
   color: #000000;
@@ -335,6 +388,28 @@ a {
   letter-spacing: 0.15px;
 }
 
+.info,
+.contacts {
+  flex-basis: 50%;
+  flex-grow: 1;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flex;
+  display: -o-flex;
+  display: flex;
+  -webkit-flex-direction: column;
+  -moz-flex-direction: column;
+  -ms-flex-direction: column;
+  -o-flex-direction: column;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+
 .info h3,
 .contacts h3 {
   color: #000000;
@@ -343,6 +418,23 @@ a {
   font-weight: 800;
   line-height: 48px;
   letter-spacing: 0.21px;
+
+  position: relative;
+}
+
+.info h3:before,
+.contacts h3:before {
+  content: ' ';
+
+  display: block;
+
+  position: absolute;
+  top: -51px;
+
+  height: 7px;
+  width: 80px;
+
+  background-color: #000000;
 }
 
 .info p,
@@ -351,18 +443,31 @@ a {
   font-family: 'Open Sans', 'Arial', sans-serif;
   font-size: 15px;
   font-weight: 300;
+  line-height: 2;
 }
 
-.info ul {
+.contacts-map {
+  margin-top: 44px;
+  margin-bottom: 83px;
+}
+
+.info .btn,
+.contacts .btn {
+  width: 260px;
+  text-align: center;
+}
+
+.info-list {
   list-style-type: circle;
   color: #e5e5e5;
+  margin-bottom: 83px;
 }
 
 .info-item a {
   color: #000000;
   font-family: 'Gilroy', 'Arial', sans-serif;
   font-size: 16px;
-  font-weight: 300;
+  font-weight: 800;
   line-height: 40px;
 }
 
@@ -448,6 +553,7 @@ a {
 
 .main-footer {
   background-color: #464646;
+  flex-basis: 100%;
 }
 
 .footer-user-item a {
@@ -538,7 +644,13 @@ a {
 /****** catalog.html ********/
 /****************************/
 
-main h1 {
+.inner-main {
+  flex-basis: 100%;
+  max-width: 1160px;
+  margin: 0 auto;
+}
+
+.inner-main h1 {
   color: #000000;
   font-family: 'Gilroy', 'Arial', sans-serif;
   font-size: 47px;
