--- a/css/style.css
+++ b/css/style.css
@@ -62,7 +62,6 @@ body {
   display: -ms-flex;
   display: -o-flex;
   display: flex;
-  flex-wrap: wrap;
 }
 
 a {
@@ -88,6 +87,12 @@ a {
   cursor: pointer;
 
   outline: none;
+}
+
+.lst-reset {
+  padding: 0;
+  margin: 0;
+  list-style-type: none;
 }
 
 
@@ -556,6 +561,49 @@ a {
   flex-basis: 100%;
 }
 
+.main-footer nav {
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flex;
+  display: -o-flex;
+  display: flex;
+  -webkit-flex-direction: row;
+  -moz-flex-direction: row;
+  -ms-flex-direction: row;
+  -o-flex-direction: row;
+  flex-direction: row;
+  -webkit-flex-wrap: wrap;
+  -moz-flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+  -o-flex-wrap: wrap;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.footer-user-nav,
+.footer-nav-list,
+.footer-social {
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flex;
+  display: -o-flex;
+  display: flex;
+  -webkit-flex-direction: row;
+  -moz-flex-direction: row;
+  -ms-flex-direction: row;
+  -o-flex-direction: row;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0;
+}
+
+
+.footer-nav-list {
+  flex-basis: 100%;
+}
+
 .footer-user-item a {
   opacity: 0.7;
   color: #ffffff;
@@ -601,6 +649,16 @@ a {
   line-height: 30px;
 }
 
+.footer-social-list {
+  align-self: center;
+}
+
+.footer-social-item {
+  display: inline-block;
+  text-align: center;
+  align-self: center;
+}
+
 .footer-social-item a {
   display: block;
 
@@ -629,7 +687,7 @@ a {
   background-image: url(../img/twitter.svg);
 }
 
-.footer-social-item:last-child a {
+.footer-social-copyright {
   display: block;
 
   opacity: 1;
@@ -638,6 +696,7 @@ a {
   height: 35px;
 
   background-image: url(../img/logo-html.svg);
+  background-repeat: no-repeat;
 }
 
 /****************************/
@@ -661,6 +720,13 @@ a {
 
 .breadcrumb {
   list-style-type: none;
+  padding: 0;
+  display: inline-block;
+}
+
+.breadcrumb li {
+  display: inline-block;
+  padding-right: 10px;
 }
 
 .breadcrumb a {
@@ -671,17 +737,32 @@ a {
   font-weight: 300;
   line-height: 24px;
   letter-spacing: 0.14px;
+
 }
 
 .breadcrumb li:not(:last-child):after {
   content: url("../img/nav-arrow.svg");
-
+  padding-left: 10px;
   width: 4px;
   height: 7px;
 }
 
+.filter {
+  flex-basis: 201px;
+}
+
 .filter fieldset {
   border: none;
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flex;
+  display: -o-flex;
+  display: flex;
+  -webkit-flex-direction: column;
+  -moz-flex-direction: column;
+  -ms-flex-direction: column;
+  -o-flex-direction: column;
+  flex-direction: column;
 }
 
 .filter legend {
@@ -743,6 +824,16 @@ a {
 
 .item-list {
   list-style-type: none;
+  padding: 0;
+  margin: 0;
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flex;
+  display: -o-flex;
+  display: flex;
+  flex-wrap: wrap;
+  flex-basis: 80%;
+  justify-content: center;
 }
 
 .item-list dt {
