--- a/css/style.css
+++ b/css/style.css
@@ -130,7 +130,8 @@ a {
   display: block;
 
   position: absolute;
-  top: -17.5px;
+  top: -18.5px;
+  left: 60px;
 }
 
 .site-search,
@@ -164,16 +165,39 @@ a {
   display: -o-flex;
   display: flex;
   padding: 0;
-  padding-bottom: 130px;
+  padding-bottom: 163px;
   position: relative;
+  margin-top: 28px;
+  margin-left: -1px;
 }
 
 .main-site-item:first-child {
   flex-basis: 50%;
+  cursor: pointer;
+}
+
+.main-submenu-toggle:after {
+  content: url(../img/plus.svg);
+
+  display: inline-block;
+  vertical-align: middle;
+
+  opacity: 0.3;
+  margin-left: 12px;
+  cursor: pointer;
+}
+
+.main-site-item:nth-child(2) {
+  margin-left: 21px;
+}
+
+.main-site-item:nth-child(3) {
+  margin-left: 34px;
 }
 
 .main-site-item:last-child {
   margin-left: auto;
+  margin-right: -4px;
 }
 
 .site-search-input {
@@ -188,7 +212,7 @@ a {
   background-color: inherit;
   background-image: url(../img/search.svg);
   background-repeat: no-repeat;
-  background-position: 0 50%;
+  background-position: 3px 50%;
 
   font-family: 'Open Sans', 'Arial', sans-serif;
   font-size: 15px;
@@ -197,7 +221,8 @@ a {
 
   color: #000000;
 
-  padding-left: 20px;
+  padding-left: 40px;
+  width: 356px;
 
   outline: none;
 }
@@ -242,7 +267,7 @@ a {
 
 .site-search-input:focus ~ .site-search-btn,
 .site-search-input:hover ~ .site-search-btn {
-  opacity: 1;
+  position: static;
 }
 
 .site-search-btn {
@@ -257,9 +282,7 @@ a {
   letter-spacing: 0.2px;
   color: #000000;
 
-  cursor: pointer;
-
-  padding: 0 21px;
+  padding: 0 18.29px;
 
   margin-left: -4px;
 
@@ -268,9 +291,8 @@ a {
 
   outline: none;
 
-  position: relative;
-
-  opacity: 0;
+  position: fixed;
+  top: -9999px;
 
   cursor: default;
 
@@ -290,10 +312,11 @@ a {
 .site-search-btn:hover {
   background-color: #000000;
   color: #ffffff;
+  cursor: pointer;
 }
 
 .site-search-btn:active {
-  opacity: 1;
+  position: static;
   color: rgba(255, 255, 255, 0.3);
 }
 
@@ -308,13 +331,16 @@ a {
   -ms-flex-wrap: wrap;
   -o-flex-wrap: wrap;
   flex-wrap: wrap;
+  -ms-align-items: center;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .lst-reset {
   list-style-type: none;
 }
 
-.main-user-nav a {
+.main-user-item a {
   color: #000000;
   font-family: 'Open Sans', 'Arial', sans-serif;
   font-size: 15px;
@@ -323,16 +349,27 @@ a {
   letter-spacing: 0.15px;
 }
 
+.main-user-item:nth-child(2) {
+  margin-right: 41px;
+}
+
+.main-user-item:first-child {
+  margin-left: 20px;
+}
+
 .main-user-item:first-child a:first-child:before {
   content: url(../img/user.svg);
+  padding-right: 14px;
 }
 
 .main-user-item:nth-child(2) a:before {
   content: url(../img/compare.svg);
+  padding-right: 10px;
 }
 
 .main-user-item:last-child a:before {
   content: url(../img/cart.svg);
+  padding-right: 10px;
 }
 
 .main-site-item > a {
@@ -356,6 +393,9 @@ a {
 
 .main-submenu {
   padding: 0;
+  margin-top: 19px;
+  margin-left: 1px;
+
   display: -webkit-flex;
   display: -moz-flex;
   display: -ms-flex;
@@ -373,10 +413,12 @@ a {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
+
+  flex-basis: 33%;
 }
 
-.main-submenu-item {
-  flex-basis: 33.3333%;
+.main-submenu-item:nth-of-type(3) {
+  margin-left: -36px;
 }
 
 .main-submenu-item:last-of-type {
@@ -879,13 +921,21 @@ a {
   height: 380px;
 
   background-color: rgba(238, 238, 238, 0.7);
+  text-align: center;
 }
 
 .item-container:hover form {
   display: block;
 }
 
+.cart-add-btn {
+  margin-top: 50%;
+  padding: 0 35px;
+}
+
 .btn-compare {
+  display: block;
+  margin: 33px auto 0 auto;
   opacity: 0.5;
   font-family: 'Open Sans', 'Arial', sans-serif;
   font-size: 13px;
